syntax = "proto3";
package sentiric.observer.v1;

service ObserverService {
  rpc IngestLog(IngestLogRequest) returns (IngestLogResponse);
}

message IngestLogRequest {
  string service_name = 1;
  string message = 2;
  string level = 3;
  string trace_id = 4;
}

message IngestLogResponse {
  bool success = 1;
}